src/objects/SYNC_PROCESS_LOG__c.object
<CustomObject>
    <fields>
        <fullName>ClientName__c</fullName>
        <label>ClientName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobIsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JobIsEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobIsStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check  this box if you want to import data and turn off triggers.</description>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastRun_RecordCount__c</fullName>
        <label>LastRun_RecordCount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessRun_Count__c</fullName>
        <label>ProcessRun_Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_From_Date__c</fullName>
        <label>Sync_From_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_To_Date__c</fullName>
        <label>Sync_To_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_RecordCount__c</fullName>
        <description>Hold the cumulative total of all records processed till date by the API data loading process</description>
        <label>Total_RecordCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SYNC_PROCESS_LOG</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JobIsEnabled__c</columns>
        <columns>JobIsStarted__c</columns>
        <columns>Description__c</columns>
        <columns>ClientName__c</columns>
        <columns>LastRun_RecordCount__c</columns>
        <columns>Sync_From_Date__c</columns>
        <columns>Sync_To_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Total_RecordCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Columns</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SYNC_PROCESS_LOG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYNC_PROCESS_LOGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>